src/App.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700&family=Poppins:wght@500;700&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Lato', sans-serif;
}

:root {
  --white: #fff;
  --gray: #ddd;
  --dark: #e8e8e8;
  --blue: dodgerblue;
  --button: #0290ff;
  --bgcolor: #fafafa;
}

body {
  background-color: var(--bgcolor);
}

ul,
li {
  list-style-type: none;
}

.align-center {
  align-items: center;
}

nav {
  background-color: var(--white);
  border-bottom: 1px solid var(--dark);
}

nav ul li {
  padding: 0 2em;
  text-transform: uppercase;
}

nav ul li a {
  color: var(--gray);
  text-decoration: none;
}

form input[type=text] {
  width: 45%;
}

.user-profile {
  width: 40px;
  text-align: end;
  justify-content: center;
  height: 40px;
  color: var(--button);
  border-radius: 50%;
  border: 1px solid var(--gray);
}

.container-fluid {
  width: 100%;
}

.d-flex {
  display: flex;
  flex-wrap: wrap;
}

.flex-column {
  flex-direction: column;
}

.space-between {
  justify-content: space-between;
}

.space-evenly {
  justify-content: space-evenly;
}

.fw-bold {
  font-weight: 800;
}

.m-1 {
  margin: 3em;
}

.m-t-1 {
  margin-top: 1em;
}

.p-1 {
  padding: 1em;
}

.p-y {
  padding: 2em 3em;
}

.title {
  padding: 1em 0;
  color: var(--gray);
  border-top: 2px solid var(--gray);
}

.text-primary {
  color: var(--button);
}

.border {
  border-left: 1px solid var(--dark);
}

.text-dull {
  color: var(--dark);
}

.btn {
  cursor: pointer;
  color: var(--white);
  border-radius: 5px;
  text-transform: uppercase;
  background-color: var(--button);
  border: 1px solid var(--button);
}

.font-large {
  font-size: x-large;
}

.progress {
  border-radius: 50%;
  width: 4.25rem;
  height: 4.25rem;
  border: 6px solid var(--button);
  border-left-color: var(--dark);
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
  margin-right: 30px;
}

.book-card {
  padding: 2em;
  border: 1px solid var(--gray);
  background-color: var(--white);
}

.book-card-item {
  width: 40%;
}

.book-card-form {
  padding: 2em 1em;
}

.action-list li button {
  border: none;
  cursor: pointer;
  color: var(--blue);
  margin-top: 1em;
  padding-right: 1em;
  background-color: var(--white);
}

.action-list li:nth-of-type(2n) button,
.action-list li:last-child button {
  padding: 0 1em;
}

.action-list li:nth-of-type(2n) button {
  border-left: 1px solid var(--gray);
  border-right: 1px solid var(--gray);
}

